Task #2371 - Adding in brush basic colours

--- a/css/biojs-vis-yugene-graph.css
+++ b/css/biojs-vis-yugene-graph.css
@@ -134,3 +134,37 @@ g.x_axis g.tick line {
 g.tick text {
 
 }
+
+
+
+svg {
+  font: 10px sans-serif;
+}
+
+.selecting circle {
+  fill-opacity: .2;
+}
+
+.selecting circle.selected {
+  stroke: #f00;
+}
+
+.resize path {
+  fill: #666;
+  fill-opacity: .8;
+  stroke: #000;
+  stroke-width: 1.5px;
+}
+
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.brush .extent {
+  fill-opacity: .125;
+  shape-rendering: crispEdges;
+}
+
+
