--- a/css/biojs-vis-yugene-graph.css
+++ b/css/biojs-vis-yugene-graph.css
@@ -123,6 +123,13 @@ path {
     stroke-width:1;
 }
 
+path.selected { 
+    fill:none;  
+    stroke: orange;
+    stroke-width:10;
+}
+
+
 rect {
     stroke-width: 2;
 }
